Upgrade relevant string blocks